# chat-app-sdk

./: .gitignore  CLAUDE.md  README.md  SIMPLIFICACAO_COMPLETA.md  chat_app.py  requirements.txt  run.sh
mesop-chat/: .gitignore  EXECUTE_NOW.sh  INSTALL_COMPLETE.sh  RUN_NOW.md  app.py  backend_server.py  direct_run.py  fix_deps.sh  fix_dict_checks.py  install_deps.sh  main_new.py  pyproject.toml  requirements.txt  run_server.py  simple_run.py  start.bat  start.sh  stop_a2a_claude.sh  test_and_run.py
mesop-chat/.claude-flow/metrics/: performance.json  task-metrics.json
mesop-chat/.well-known/: agent.json
mesop-chat/components/: event_viewer.py  task_card.py
mesop-chat/hosts/cli/: __main__.py
mesop-chat/hosts/multiagent/: host_agent.py
mesop-chat/pages/: claude_chat.py
mesop-chat/scripts/: fix-hooks.sh
mesop-chat/service/: types.py
mesop-chat/service/client/: claude_cli_client.py
mesop-chat/service/server/: adk_host_manager.py  claude_service.py  in_memory_manager.py  mcp_agent_manager.py  server.py
mesop-chat/state/: host_agent_service.py  state.py
mesop-chat/tests/: __init__.py  test_claude_integration.py  test_dataclass_error.py  test_debug.py  test_mesop_simulation.py  test_new_chat_button.py  test_new_chat_simple.py  test_serialization_fix.py  test_ui_integration.py
mesop-chat/tests/api/: .env.example  README.md  __init__.py  conftest.py  demo_tests.py  pytest.ini  requirements.txt  run_tests.py  test_agent_card.py  test_error_handling.py  test_helloworld_integration.py  test_message_send.py  test_message_stream.py  test_simple_validation.py
(+152 files in other folders)
