[project]
name = "mesop-chat"
version = "1.0.0"
description = "Claude Code SDK Chat Interface with A2A Protocol"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.62.0",
    "claude-code-sdk>=0.0.20",
    "mesop>=1.1.0",
    "python-socketio>=5.13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
]
